
	* draw*.v: All drawing modules are updated. 
