@@ -1,6 +1,7 @@
-1010
-0001
-1111
 0000
+0001
 0010
-1001
+0011
+0100
+0101
+
