@@ -2,7 +2,7 @@
 // The following content is auto generated by AutoGenerate.py
 // Written by Zijian Zhao
 // github.com/JackZhao98
-// Date created: 2020/03/01  20:44:11
+// Date created: 2020/03/01  21:13:28
 
 
 //	Selector Summary
@@ -13,7 +13,7 @@
 
 module drawBackGround#(parameter ratio = 1)
 	(
-	    input  wire 	   rst,
+	    input  wire        rst,
 	    input  wire [31:0] ox,
 	    input  wire [31:0] oy,
 	    input  wire [31:0] X,
@@ -1235,7 +1235,7 @@ case(select)
 	inGrey <= inGrey_Horizon;
 	objectWidth <= HorizonWidth;
 	objectHeight <= HorizonHeight;
-end // end of case: Case: Horizon
+end // end of case
 
 4'b0001: begin	// Case: Restart
 	inHitBox <= inHitBox_Restart;
@@ -1243,7 +1243,7 @@ end // end of case: Case: Horizon
 	inGrey <= inGrey_Restart;
 	objectWidth <= RestartWidth;
 	objectHeight <= RestartHeight;
-end // end of case: Case: Restart
+end // end of case
 
 4'b0010: begin	// Case: GameOver
 	inHitBox <= inHitBox_GameOver;
@@ -1251,7 +1251,7 @@ end // end of case: Case: Restart
 	inGrey <= inGrey_GameOver;
 	objectWidth <= GameOverWidth;
 	objectHeight <= GameOverHeight;
-end // end of case: Case: GameOver
+end // end of case
 
 
 endcase
