@@ -2,7 +2,7 @@
 // The following content is auto generated by AutoGenerate.py
 // Written by Zijian Zhao
 // github.com/JackZhao98
-// Date created: 2020/03/01  20:44:11
+// Date created: 2020/03/01  21:13:29
 
 
 //	Selector Summary
@@ -11,7 +11,7 @@
 
 module drawDecor#(parameter ratio = 1)
 	(
-	    input  wire 	   rst,
+	    input  wire        rst,
 	    input  wire [31:0] ox,
 	    input  wire [31:0] oy,
 	    input  wire [31:0] X,
@@ -198,7 +198,7 @@ case(select)
 	inGrey <= inGrey_Cloud;
 	objectWidth <= CloudWidth;
 	objectHeight <= CloudHeight;
-end // end of case: Case: Cloud
+end // end of case
 
 
 endcase
