@@ -2,21 +2,21 @@
 // The following content is auto generated by AutoGenerate.py
 // Written by Zijian Zhao
 // github.com/JackZhao98
-// Date created: 2020/03/01  20:44:11
+// Date created: 2020/03/01  21:13:29
 
 
 //	Selector Summary
-//	4'b1010	: duckRight
+//	4'b0000	: duckRight
 //	4'b0001	: left
-//	4'b1111	: dead
-//	4'b0000	: default
-//	4'b0010	: right
-//	4'b1001	: duckLeft
+//	4'b0010	: dead
+//	4'b0011	: default
+//	4'b0100	: right
+//	4'b0101	: duckLeft
 
 
 module drawDino#(parameter ratio = 1)
 	(
-	    input  wire 	   rst,
+	    input  wire        rst,
 	    input  wire [31:0] ox,
 	    input  wire [31:0] oy,
 	    input  wire [31:0] X,
@@ -1666,13 +1666,13 @@ always @(*) begin
 
 case(select)
 
-4'b1010: begin	// Case: duckRight
+4'b0000: begin	// Case: duckRight
 	inHitBox <= inHitBox_duckRight;
 	inWhite <= inWhite_duckRight;
 	inGrey <= inGrey_duckRight;
 	objectWidth <= duckRightWidth;
 	objectHeight <= duckRightHeight;
-end // end of case: Case: duckRight
+end // end of case
 
 4'b0001: begin	// Case: left
 	inHitBox <= inHitBox_left;
@@ -1680,39 +1680,39 @@ end // end of case: Case: duckRight
 	inGrey <= inGrey_left;
 	objectWidth <= leftWidth;
 	objectHeight <= leftHeight;
-end // end of case: Case: left
+end // end of case
 
-4'b1111: begin	// Case: dead
+4'b0010: begin	// Case: dead
 	inHitBox <= inHitBox_dead;
 	inWhite <= inWhite_dead;
 	inGrey <= inGrey_dead;
 	objectWidth <= deadWidth;
 	objectHeight <= deadHeight;
-end // end of case: Case: dead
+end // end of case
 
-4'b0000: begin	// Case: default
+4'b0011: begin	// Case: default
 	inHitBox <= inHitBox_default;
 	inWhite <= inWhite_default;
 	inGrey <= inGrey_default;
 	objectWidth <= defaultWidth;
 	objectHeight <= defaultHeight;
-end // end of case: Case: default
+end // end of case
 
-4'b0010: begin	// Case: right
+4'b0100: begin	// Case: right
 	inHitBox <= inHitBox_right;
 	inWhite <= inWhite_right;
 	inGrey <= inGrey_right;
 	objectWidth <= rightWidth;
 	objectHeight <= rightHeight;
-end // end of case: Case: right
+end // end of case
 
-4'b1001: begin	// Case: duckLeft
+4'b0101: begin	// Case: duckLeft
 	inHitBox <= inHitBox_duckLeft;
 	inWhite <= inWhite_duckLeft;
 	inGrey <= inGrey_duckLeft;
 	objectWidth <= duckLeftWidth;
 	objectHeight <= duckLeftHeight;
-end // end of case: Case: duckLeft
+end // end of case
 
 
 endcase
