@@ -2,7 +2,7 @@
 // The following content is auto generated by AutoGenerate.py
 // Written by Zijian Zhao
 // github.com/JackZhao98
-// Date created: 2020/03/01  20:44:11
+// Date created: 2020/03/01  21:13:29
 
 
 //	Selector Summary
@@ -20,7 +20,7 @@
 
 module drawNumber#(parameter ratio = 1)
 	(
-	    input  wire 	   rst,
+	    input  wire        rst,
 	    input  wire [31:0] ox,
 	    input  wire [31:0] oy,
 	    input  wire [31:0] X,
@@ -903,7 +903,7 @@ case(select)
 	inGrey <= inGrey_three;
 	objectWidth <= threeWidth;
 	objectHeight <= threeHeight;
-end // end of case: Case: three
+end // end of case
 
 4'b0110: begin	// Case: six
 	inHitBox <= inHitBox_six;
@@ -911,7 +911,7 @@ end // end of case: Case: three
 	inGrey <= inGrey_six;
 	objectWidth <= sixWidth;
 	objectHeight <= sixHeight;
-end // end of case: Case: six
+end // end of case
 
 4'b0010: begin	// Case: two
 	inHitBox <= inHitBox_two;
@@ -919,7 +919,7 @@ end // end of case: Case: six
 	inGrey <= inGrey_two;
 	objectWidth <= twoWidth;
 	objectHeight <= twoHeight;
-end // end of case: Case: two
+end // end of case
 
 4'b0100: begin	// Case: four
 	inHitBox <= inHitBox_four;
@@ -927,7 +927,7 @@ end // end of case: Case: two
 	inGrey <= inGrey_four;
 	objectWidth <= fourWidth;
 	objectHeight <= fourHeight;
-end // end of case: Case: four
+end // end of case
 
 4'b0000: begin	// Case: zero
 	inHitBox <= inHitBox_zero;
@@ -935,7 +935,7 @@ end // end of case: Case: four
 	inGrey <= inGrey_zero;
 	objectWidth <= zeroWidth;
 	objectHeight <= zeroHeight;
-end // end of case: Case: zero
+end // end of case
 
 4'b1000: begin	// Case: eight
 	inHitBox <= inHitBox_eight;
@@ -943,7 +943,7 @@ end // end of case: Case: zero
 	inGrey <= inGrey_eight;
 	objectWidth <= eightWidth;
 	objectHeight <= eightHeight;
-end // end of case: Case: eight
+end // end of case
 
 4'b0101: begin	// Case: five
 	inHitBox <= inHitBox_five;
@@ -951,7 +951,7 @@ end // end of case: Case: eight
 	inGrey <= inGrey_five;
 	objectWidth <= fiveWidth;
 	objectHeight <= fiveHeight;
-end // end of case: Case: five
+end // end of case
 
 4'b0001: begin	// Case: one
 	inHitBox <= inHitBox_one;
@@ -959,7 +959,7 @@ end // end of case: Case: five
 	inGrey <= inGrey_one;
 	objectWidth <= oneWidth;
 	objectHeight <= oneHeight;
-end // end of case: Case: one
+end // end of case
 
 4'b0111: begin	// Case: seven
 	inHitBox <= inHitBox_seven;
@@ -967,7 +967,7 @@ end // end of case: Case: one
 	inGrey <= inGrey_seven;
 	objectWidth <= sevenWidth;
 	objectHeight <= sevenHeight;
-end // end of case: Case: seven
+end // end of case
 
 4'b1001: begin	// Case: nine
 	inHitBox <= inHitBox_nine;
@@ -975,7 +975,7 @@ end // end of case: Case: seven
 	inGrey <= inGrey_nine;
 	objectWidth <= nineWidth;
 	objectHeight <= nineHeight;
-end // end of case: Case: nine
+end // end of case
 
 
 endcase
