@@ -2,7 +2,7 @@
 // The following content is auto generated by AutoGenerate.py
 // Written by Zijian Zhao
 // github.com/JackZhao98
-// Date created: 2020/03/01  20:44:11
+// Date created: 2020/03/01  21:13:29
 
 
 //	Selector Summary
@@ -18,7 +18,7 @@
 
 module drawObstacle#(parameter ratio = 1)
 	(
-	    input  wire 	   rst,
+	    input  wire        rst,
 	    input  wire [31:0] ox,
 	    input  wire [31:0] oy,
 	    input  wire [31:0] X,
@@ -3912,7 +3912,7 @@ case(select)
 	inGrey <= inGrey_BirdDown;
 	objectWidth <= BirdDownWidth;
 	objectHeight <= BirdDownHeight;
-end // end of case: Case: BirdDown
+end // end of case
 
 4'b0010: begin	// Case: SmallB
 	inHitBox <= inHitBox_SmallB;
@@ -3920,7 +3920,7 @@ end // end of case: Case: BirdDown
 	inGrey <= inGrey_SmallB;
 	objectWidth <= SmallBWidth;
 	objectHeight <= SmallBHeight;
-end // end of case: Case: SmallB
+end // end of case
 
 4'b0011: begin	// Case: SmallC
 	inHitBox <= inHitBox_SmallC;
@@ -3928,7 +3928,7 @@ end // end of case: Case: SmallB
 	inGrey <= inGrey_SmallC;
 	objectWidth <= SmallCWidth;
 	objectHeight <= SmallCHeight;
-end // end of case: Case: SmallC
+end // end of case
 
 4'b0001: begin	// Case: BirdUp
 	inHitBox <= inHitBox_BirdUp;
@@ -3936,7 +3936,7 @@ end // end of case: Case: SmallC
 	inGrey <= inGrey_BirdUp;
 	objectWidth <= BirdUpWidth;
 	objectHeight <= BirdUpHeight;
-end // end of case: Case: BirdUp
+end // end of case
 
 4'b0000: begin	// Case: SmallA
 	inHitBox <= inHitBox_SmallA;
@@ -3944,7 +3944,7 @@ end // end of case: Case: BirdUp
 	inGrey <= inGrey_SmallA;
 	objectWidth <= SmallAWidth;
 	objectHeight <= SmallAHeight;
-end // end of case: Case: SmallA
+end // end of case
 
 4'b1010: begin	// Case: LargeB
 	inHitBox <= inHitBox_LargeB;
@@ -3952,7 +3952,7 @@ end // end of case: Case: SmallA
 	inGrey <= inGrey_LargeB;
 	objectWidth <= LargeBWidth;
 	objectHeight <= LargeBHeight;
-end // end of case: Case: LargeB
+end // end of case
 
 4'b1011: begin	// Case: LargeC
 	inHitBox <= inHitBox_LargeC;
@@ -3960,7 +3960,7 @@ end // end of case: Case: LargeB
 	inGrey <= inGrey_LargeC;
 	objectWidth <= LargeCWidth;
 	objectHeight <= LargeCHeight;
-end // end of case: Case: LargeC
+end // end of case
 
 4'b1001: begin	// Case: LargeA
 	inHitBox <= inHitBox_LargeA;
@@ -3968,7 +3968,7 @@ end // end of case: Case: LargeC
 	inGrey <= inGrey_LargeA;
 	objectWidth <= LargeAWidth;
 	objectHeight <= LargeAHeight;
-end // end of case: Case: LargeA
+end // end of case
 
 
 endcase
