@@ -1,3 +1,6 @@
+2020-03-01  Jack Zhao  <jackzhao@Jacks-MacBook-Pro.local>
+
+	* Gravity.v: v0.1 Initialze Gravity module. Initial speed and gravity are passed as parameters. Both variables are expected to be integers, and InitialSpeed is expected to be divided by 2 if squared (i.e. IS^2/2 is a whole number). 
 
 	* draw*.v: All drawing modules are updated. 
 
